--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "weather-js": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
