--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "weather-js": "^2.0.0"
   },
   "devDependencies": {
