config.json: Update "porduction"

--- a/config/config.json
+++ b/config/config.json
@@ -10,8 +10,14 @@
     "dialect": "postgres"
   },
   "production": {
-    "database": "creative_writing_prod",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres",
+    "dialectOptions": {
+        "ssl": {
+          "require": true,
+          "rejectUnauthorized": false
+        }
+      }
   }
+  
 }
